rid-2 [test] prtest

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,23 @@
-root:
-- changed-files:
-  - any-glob-to-any-file: '*'
+enable:
+  issues: false
+  prs: true
+
+labels:
+  'bug':
+    include:
+      - '\bfix\b'
+  'enhancement':
+    include:
+      - '\bfeat\b'
+  'documentation':
+    include:
+      - '\bdocs\b'
+  'release':
+    include:
+      - '\brelease\b'
+  'refactoring':
+    include:
+      - '\brefactor\b'
+  'test':
+    include:
+      - '\btest\b'
